--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,6 +6,7 @@ plugins {
     id 'com.google.dagger.hilt.android'
     id 'kotlin-parcelize'
 }
+
 Properties properties = new Properties()
 properties.load(project.rootProject.file('local.properties').newDataInputStream())
 
@@ -100,101 +101,101 @@ android {
 
 dependencies {
     // androidx
-    implementation 'androidx.core:core-ktx:1.10.0'
-    implementation 'androidx.appcompat:appcompat:1.6.1'
+    implementation(libs.androidx.core.ktx)
+    implementation(libs.androidx.appcompat)
     // coroutines
-    implementation("org.jetbrains.kotlinx:kotlinx-coroutines-core:1.6.4")
-    implementation("org.jetbrains.kotlinx:kotlinx-coroutines-android:1.6.4")
-    implementation 'com.google.android.material:material:1.8.0'
+    implementation(libs.kotlinx.coroutines.core)
+    implementation(libs.jetbrains.kotlinx.coroutines.android)
     // retrofit2
-    implementation "com.squareup.retrofit2:retrofit:2.9.0"
-    implementation "com.squareup.retrofit2:converter-gson:2.9.0"
-    implementation 'com.jakewharton.retrofit:retrofit2-kotlinx-serialization-converter:0.8.0'
+    implementation(libs.retrofit)
+    implementation(libs.converter.gson)
+    implementation(libs.retrofit2.kotlinx.serialization.converter)
     // OkHttp
-    implementation 'com.squareup.okhttp3:okhttp:4.10.0'
-    implementation 'com.squareup.okhttp3:logging-interceptor:4.10.0'
+    implementation(libs.okhttp)
+    implementation(libs.logging.interceptor)
     // coil
-    implementation 'io.coil-kt:coil:2.2.2'
+    implementation(libs.coil)
     // activity-ktx
-    implementation 'androidx.activity:activity-ktx:1.7.0'
+    implementation(libs.androidx.activity.ktx)
     // fragment-ktx
-    implementation "androidx.fragment:fragment-ktx:1.5.6"
+    implementation(libs.androidx.fragment.ktx)
     // ViewModel
-    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.6.1"
+    implementation(libs.androidx.lifecycle.viewmodel.ktx)
     // viewModel savedstate
-    implementation "androidx.lifecycle:lifecycle-viewmodel-savedstate:2.6.1"
+    implementation(libs.androidx.lifecycle.viewmodel.savedstate)
     // LiveData
-    implementation("androidx.lifecycle:lifecycle-livedata-ktx:2.6.1")
+    implementation(libs.androidx.lifecycle.livedata.ktx)
     // gson
-    implementation 'com.google.code.gson:gson:2.8.9'
+    implementation(libs.gson)
     // secret
-    implementation "com.google.android.libraries.mapsplatform.secrets-gradle-plugin:secrets-gradle-plugin:2.0.1"
+    implementation(libs.secrets.gradle.plugin)
     // SharedPreference
-    implementation 'androidx.security:security-crypto-ktx:1.1.0-alpha05'
+    implementation(libs.androidx.security.crypto.ktx)
     // DataStore
-    implementation 'androidx.datastore:datastore-preferences:1.0.0'
-    // CoordinateLayout
-    implementation "androidx.coordinatorlayout:coordinatorlayout:1.1.0"
-    // RecyclerView
-    implementation "androidx.recyclerview:recyclerview:1.2.1"
+    implementation(libs.androidx.datastore.preferences)
+    // lifecycle
+    implementation(libs.androidx.lifecycle.runtime.ktx)
+
     // ui //
-    implementation 'com.google.android.material:material:1.8.0'
-    implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
+    // Material
+    implementation(libs.material)
+    // ConstraintLayout
+    implementation(libs.androidx.constraintlayout)
+    // CoordinateLayout
+    implementation(libs.androidx.coordinatorlayout)
+    // RecyclerView
+    implementation(libs.androidx.recyclerview)
     // navigation
-    implementation "androidx.navigation:navigation-ui-ktx:2.5.3"
-    implementation "androidx.navigation:navigation-fragment-ktx:2.5.3"
+    implementation(libs.androidx.navigation.ui.ktx)
+    implementation(libs.androidx.navigation.fragment.ktx)
     // lottie
-    implementation 'com.airbnb.android:lottie:5.2.0'
+    implementation(libs.lottie)
     // splash
-    implementation 'androidx.core:core-splashscreen:1.0.0'
+    implementation(libs.androidx.core.splashscreen)
     // balloon tooltip
-    implementation "com.github.skydoves:balloon:1.5.3"
-    // Splashscreen
-    implementation 'androidx.core:core-splashscreen:1.0.0-rc01'
+    implementation(libs.balloon)
 
     // external //
     // firebase
-    implementation platform('com.google.firebase:firebase-bom:32.2.3')
-    implementation 'com.google.firebase:firebase-config-ktx'
-    implementation 'com.google.firebase:firebase-analytics-ktx'
-    implementation 'com.google.firebase:firebase-messaging-ktx'
-    implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.7.0'
-    implementation platform('androidx.compose:compose-bom:2023.03.00')
-    implementation 'androidx.compose.ui:ui-graphics'
+    implementation(platform(libs.firebase.bom))
+    implementation(libs.firebase.config.ktx)
+    implementation(libs.firebase.analytics.ktx)
+    implementation(libs.firebase.messaging.ktx)
     // test
-    testImplementation 'junit:junit:4.13.2'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.5'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
+    testImplementation(libs.junit)
+    androidTestImplementation(libs.androidx.junit)
+    androidTestImplementation(libs.androidx.espresso.core)
     // kakao
-    implementation "com.kakao.sdk:v2-user:2.13.0"
+    implementation(libs.v2.user)
     // Hilt
-    implementation 'com.google.dagger:hilt-android:2.44.2'
-    androidTestImplementation platform('androidx.compose:compose-bom:2023.03.00')
-    androidTestImplementation 'androidx.compose.ui:ui-test-junit4'
-    debugImplementation 'androidx.compose.ui:ui-test-manifest'
-    kapt 'com.google.dagger:hilt-compiler:2.44.2'
+    implementation(libs.hilt.android)
+    kapt(libs.hilt.compiler)
     // Timber
-    implementation "com.jakewharton.timber:timber:5.0.1"
+    implementation(libs.timber)
     // Glide
-    implementation 'com.github.bumptech.glide:glide:4.13.2'
-
+    implementation(libs.glide)
     // Amplitude
-    implementation 'com.amplitude:analytics-android:1.+'
+    implementation(libs.analytics.android)
 
-    def composeBom = platform('androidx.compose:compose-bom:2023.01.00')
-    implementation composeBom
-    androidTestImplementation composeBom
+    // Compose
+    implementation(platform(libs.androidx.compose.bom))
+    implementation(libs.androidx.compose.ui.graphics)
+    implementation(libs.androidx.compose.ui.tooling.preview)
+    implementation(libs.androidx.compose.ui.tooling)
+    implementation(libs.androidx.compose.ui)
+    implementation(libs.androidx.material.icons.extended)
 
-    // Material Design 3
-    implementation 'androidx.compose.material3:material3'
-
-    implementation 'androidx.compose.ui:ui-tooling-preview'
-    implementation 'androidx.compose.ui:ui-tooling'
-    implementation 'androidx.compose.ui:ui'
-    implementation("androidx.compose.material:material-icons-extended:1.5.4")
+    // Compose Material Design 3
+    implementation(libs.androidx.compose.material3)
 
     // Optional - Integration with activities
-    implementation 'androidx.activity:activity-compose:1.8.2'
+    implementation(libs.androidx.activity.compose)
     // Optional - Integration with ViewModels
-    implementation 'androidx.lifecycle:lifecycle-viewmodel-compose:2.7.0'
+    implementation(libs.androidx.lifecycle.viewmodel.compose)
+
+    // Compose test
+    androidTestImplementation(platform(libs.androidx.compose.bom))
+    androidTestImplementation(libs.androidx.compose.ui.test.junit4)
+    debugImplementation(libs.androidx.compose.ui.test.manifest)
+
 }
