--- a/build.gradle
+++ b/build.gradle
@@ -7,13 +7,13 @@ buildscript {
     }
 
     dependencies {
-        classpath 'com.google.gms:google-services:4.3.15'
-        classpath 'com.google.dagger:hilt-android-gradle-plugin:2.44.2'
+        classpath(libs.google.services)
+        classpath(libs.hilt.android.gradle.plugin)
     }
 }
 
 plugins {
-    id 'com.android.application' version '8.3.0' apply false
-    id 'com.android.library' version '8.3.0' apply false
-    id 'org.jetbrains.kotlin.android' version '1.8.10' apply false
+    alias(libs.plugins.androidApplication) apply false
+    alias(libs.plugins.androidLibrary) apply false
+    alias(libs.plugins.jetbrainsKotlinAndroid) apply false
 }
