--- a/.gitignore
+++ b/.gitignore
@@ -57,6 +57,7 @@ captures/
 # Uncomment the following lines if you do not want to check your keystore files in.
 *.jks
 *.keystore
+/smeem.pem
 
 # External native build folder generated in Android Studio 2.2 and later
 .externalNativeBuild
