compose navigation 의존성 추가

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -201,8 +201,11 @@ dependencies {
     // Compose Material Design 3
     implementation(libs.androidx.compose.material3)
 
-    // lifecycle
-    implementation(libs.androidx.lifecycle.runtime.compose)
+    // Compose navigation
+    implementation(libs.androidx.navigation.compose)
+
+    // hilt navigation compose
+    implementation(libs.androidx.hilt.navigation.compose)
 
     // Compose navigation
     implementation(libs.androidx.navigation.compose)
