--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,6 @@
         android:value="false" />
 
     <application
-        tools:replace="icon, label"
         android:name=".Smeem"
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
@@ -23,6 +22,7 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Smeem"
         android:usesCleartextTraffic="true"
+        tools:replace="icon, label"
         tools:targetApi="31">
 
         <activity
@@ -128,7 +128,12 @@
         <activity
             android:name=".presentation.home.HomeActivity"
             android:exported="false"
-            android:screenOrientation="portrait" /> <!-- Messaging Service -->
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".presentation.mypage.TempMyPageActivity"
+            android:exported="false"
+            android:screenOrientation="portrait" />
+        <!-- Messaging Service -->
         <service
             android:name=".MessagingService"
             android:exported="false">
