--- a/app/build.gradle
+++ b/app/build.gradle
@@ -204,6 +204,9 @@ dependencies {
     // lifecycle
     implementation(libs.androidx.lifecycle.runtime.compose)
 
+    // Compose navigation
+    implementation(libs.androidx.navigation.compose)
+
     // Optional - Integration with activities
     implementation(libs.androidx.activity.compose)
     // Optional - Integration with ViewModels
