--- a/app/build.gradle
+++ b/app/build.gradle
@@ -212,6 +212,9 @@ dependencies {
     // hilt navigation compose
     implementation(libs.androidx.hilt.navigation.compose)
 
+    // coil compose
+    implementation(libs.coil.compose)
+
     // Optional - Integration with activities
     implementation(libs.androidx.activity.compose)
     // Optional - Integration with ViewModels
