--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -132,7 +132,8 @@
         <activity
             android:name=".presentation.mypage.TempMyPageActivity"
             android:exported="false"
-            android:screenOrientation="portrait" />
+            android:screenOrientation="portrait"
+            android:windowSoftInputMode="adjustResize" />
         <!-- Messaging Service -->
         <service
             android:name=".MessagingService"
