커스텀 탭 링크 로직 추가

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -189,6 +189,8 @@ dependencies {
     implementation(libs.glide)
     // Amplitude
     implementation(libs.analytics.android)
+    // Browser
+    implementation(libs.androidx.browser)
 
     // Compose
     implementation(platform(libs.androidx.compose.bom))
