--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -39,6 +39,7 @@ securityCryptoKtx = "1.1.0-alpha05"
 timber = "5.0.1"
 v2User = "2.13.0"
 kotlin = "1.9.22"
+browser = "1.8.0"
 
 [libraries]
 analytics-android = { module = "com.amplitude:analytics-android", version.ref = "analyticsAndroid" }
@@ -99,6 +100,7 @@ retrofit2-kotlinx-serialization-converter = { module = "com.jakewharton.retrofit
 secrets-gradle-plugin = { module = "com.google.android.libraries.mapsplatform.secrets-gradle-plugin:secrets-gradle-plugin", version.ref = "secretsGradlePlugin" }
 timber = { module = "com.jakewharton.timber:timber", version.ref = "timber" }
 v2-user = { module = "com.kakao.sdk:v2-user", version.ref = "v2User" }
+androidx-browser = { module = "androidx.browser:browser", version.ref = "browser" }
 
 [plugins]
 androidApplication = { id = "com.android.application", version.ref = "agp" }
