--- a/build.gradle
+++ b/build.gradle
@@ -8,6 +8,7 @@ buildscript {
 
     dependencies {
         classpath(libs.google.services)
+        classpath(libs.firebase.crashlytics.gradle)
         classpath(libs.hilt.android.gradle.plugin)
     }
 }
