--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,4 +1,5 @@
 [versions]
+appsflyerAndroidSdk = "6.14.0"
 agp = "8.3.0"
 activityKtx = "1.8.2"
 analyticsAndroid = "1.16.7"
@@ -44,6 +45,7 @@ kotlin = "1.9.22"
 browser = "1.8.0"
 
 [libraries]
+appsflyer-android-sdk = { module = "com.appsflyer:af-android-sdk", version.ref = "appsflyerAndroidSdk" }
 analytics-android = { module = "com.amplitude:analytics-android", version.ref = "analyticsAndroid" }
 androidx-activity-compose = { module = "androidx.activity:activity-compose", version.ref = "activityKtx" }
 androidx-activity-ktx = { module = "androidx.activity:activity-ktx", version.ref = "activityKtx" }
