--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,21 +26,10 @@
         tools:targetApi="31">
 
         <activity
-            android:name=".presentation.mypage.MyPageMoreActivity"
-            android:exported="false"
-            android:screenOrientation="portrait" />
-        <activity
             android:name=".presentation.agreement.AgreementViewActivity"
             android:exported="false"
             android:screenOrientation="portrait" />
-        <activity
-            android:name=".presentation.mypage.EditTrainingTimeActivity"
-            android:exported="false"
-            android:screenOrientation="portrait" />
-        <activity
-            android:name=".presentation.mypage.DisplayTrainingGoalActivity"
-            android:exported="false"
-            android:screenOrientation="portrait" /> <!-- Splash -->
+        <!-- Splash -->
         <activity
             android:name=".presentation.splash.SplashStartActivity"
             android:exported="true"
@@ -131,28 +120,11 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".presentation.mypage.ChangingNicknameActivity"
-            android:exported="false"
-            android:screenOrientation="portrait"
-            android:windowSoftInputMode="stateAlwaysVisible|adjustResize" />
-        <activity
-            android:name=".presentation.mypage.MyPageActivity"
-            android:exported="false"
-            android:screenOrientation="portrait" />
-        <activity
-            android:name=".presentation.mypage.MyBadgesActivity"
-            android:exported="false"
-            android:screenOrientation="portrait" />
-        <activity
-            android:name=".presentation.mypage.EditTrainingGoalActivity"
-            android:exported="false"
-            android:screenOrientation="portrait" />
-        <activity
             android:name=".presentation.home.HomeActivity"
             android:exported="false"
             android:screenOrientation="portrait" />
         <activity
-            android:name=".presentation.mypage.TempMyPageActivity"
+            android:name=".presentation.mypage.MyPageActivity"
             android:exported="false"
             android:screenOrientation="portrait"
             android:windowSoftInputMode="adjustResize" />
